--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>Shawn Steffey</h1>
 <p>Random Stuff</p>
 
-<a href="Unit1.html"> Sample Video with Chapters </a>
+<a href="Unit_1.html"> Sample Video with Chapters </a>
 </body>
 </html>
