Fixed vtt file association

--- a/Unit_1.html
+++ b/Unit_1.html
@@ -9,7 +9,7 @@
     jwplayer("myElement").setup({
         file: "Unit1.mp4",
 		  tracks: [{
-                    file:'testing.vtt',
+                    file:'chapters.vtt',
                     kind:'chapters'
                 }]
     });
