Changed video to Dropbox public link
No clue if this works

--- a/Unit_1.html
+++ b/Unit_1.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript">
     jwplayer("myElement").setup({
-        file: "Unit1.mp4",
+        file: "https://dl.dropboxusercontent.com/u/3066508/Chess/Unit1_All_Chapters.mp4",
 		  tracks: [{
                     file:'chapters.vtt',
                     kind:'chapters'
