--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Welp.  Nothing to see here...<br/><br/>  Way to go. You broke it</h1>
+<h1>Bruner 404.<br/> Room not found </h1>
 </html>
