--- a/Unit_1.html
+++ b/Unit_1.html
@@ -4,6 +4,9 @@
 
 <body>
 <div id="myElement">Loading the player ...</div>
+<h3> This may take a moment to load. It's a large file </h3>
+
+<p> Once the video is locally hosted on the final site it should stream without this delay. For this demo I'm having to stream from my Dropbox folder </p>
 
 <script type="text/javascript">
     jwplayer("myElement").setup({
@@ -15,9 +18,8 @@
     });
 </script>
 
-<a href="#" onclick="jwplayer().seek(86);">Train and tube stations</a>
-<a href="#" onclick="jwplayer().seek(86);">Train and tube stations</a>
-<a href="#" onclick="jwplayer().seek(86);">Train and tube stations</a>
-<a href="#" onclick="jwplayer().seek(86);">Train and tube stations</a>
-<a href="#" onclick="jwplayer().seek(86);">Train and tube stations</a>
+<br/>
+<p> If you're having issues with actually being able to watch the whole video through that player, you can download it</p>
+<a href="https://dl.dropboxusercontent.com/u/3066508/Chess/Unit1_All_Chapters.mp4"> Here.</a>
+
 </body>
