--- a/Unit_1.html
+++ b/Unit_1.html
@@ -17,9 +17,12 @@
                 }]
     });
 </script>
+<p>Just click on the chapter markers to go to them.  You may need Firefox or Chrome to see the video (but I may be wrong about that) </p>
+
 
 <br/>
 <p> If you're having issues with actually being able to watch the whole video through that player, you can download it</p>
 <a href="https://dl.dropboxusercontent.com/u/3066508/Chess/Unit1_All_Chapters.mp4"> Here.</a>
+<p> But keep in mind that it will not have the associated chapters in the video file itself</p>
 
 </body>
