--- a/Unit_1.html
+++ b/Unit_1.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
     jwplayer("myElement").setup({
-        file: "http://www.youtube.com/watch?v=T24DPU-hkJM",
+        file: "http://youtu.be/GSlnEPYVfyw",
 		  tracks: [{
                     file:'chapters.vtt',
                     kind:'chapters'
