--- a/Unit_1.html
+++ b/Unit_1.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
     jwplayer("myElement").setup({
-        file: "http://youtu.be/GSlnEPYVfyw",
+        file: "https://dl.dropboxusercontent.com/u/3066508/Chess/Unit1_All_Chapters.mp4",
 		  tracks: [{
                     file:'chapters.vtt',
                     kind:'chapters'
