Major Design Update #2
Added Bio page, Art Page template, Footer bar, Buttons to return home,
and a few other misc. fixes.

--- a/Other.html
+++ b/Other.html
@@ -7,8 +7,17 @@
 
 <body>
 <h1> Other Stuff </h1>
-<p> Until I get this place looking nice...</p>
+
+<div class="mainBox">
+
+<p> Misc</p>
 <ul>
 <li><a href="Unit_1.html">Chess Video One </a></li>
 </ul>
+
+</div>
+
+
+<div class="return"> <a href="Index.html">Return Home </a>  </div>
+<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
 </body>
