--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="shawn.css">
 
+<title>Shawn Steffey</title>
 </head>
 
 
@@ -15,46 +16,50 @@
 
 
 <!-- Code Button-->
-<div class="boxed" style=" left: 25%;";>
-		
-	<a href="Code.html">Code</a>
-	
-</div>
-
+<a class="boxed" href="Construction.html" style=" left: 25%;">
+	Code
+</a>
 
 <!-- Art Button-->
-<div class="boxed" style=" left: 45%;";>
-		
-	<a href="Art.html">Art</a>
-	
-</div>
+<a class="boxed" href="Art.html" style=" left: 45%;";>	
+	Art
+</a>
 
 
 <!-- Other Button-->
-<div class="boxed" style=" left: 65%;";>
-	<a href="Other.html">Other</a>
-</div>
+<a class="boxed" href="Other.html" style=" left: 65%;";>
+	Other
+</a>
 
 <!-- Grid image -->
-<div class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:53;">
+<div class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:-51;">
 </div>
 
 <!-- Canvas image -->
-<div class="bground" style="width:60%; background-image: url('Images/canvas_white.jpg'); z-index:52;">
+<div class="bground" style="width:60%; background-image: url('Images/canvas_white.jpg'); z-index:-52;">
 </div>
 
 <!-- Lined image -->
-<div class="bground" style="width:100%; background-image: url('Images/line_white.jpg'); z-index:51;">
+<div class="bground" style="width:100%; background-image: url('Images/line_white.jpg'); z-index:-53;">
 </div>
 
 <!-- Edge1 -->
-<div class="bgroundRip" style="left: 39%; width:50px; background-image: url('Images/ripleft.png'); z-index:200; margin-left: -42px;">
+<div class="bgroundRip" style="left: 39%; width:50px; background-image: url('Images/ripleft.png'); z-index:-20; margin-left: -42px;">
 </div
 
 <!-- Edge2 -->
-<div class="bgroundRip" style="left: 60%; width:50px; background-image: url('Images/ripright.png'); z-index:200;">
+<div class="bgroundRip" style="left: 60%; width:50px; background-image: url('Images/ripright.png'); z-index:-20;">
 </div
 
+
+<!-- About Me -->
+<div class="wrapper">
+	<div style="position:absolute; right:20px; bottom:20px; width: 100px; height: 100px;">
+		<a href="Bio.html"><img src="Images/aboutFace.png" onmouseover="this.src='Images/aboutFaceHover.png'" onmouseout="this.src='Images/aboutFace.png'" style="width:100%; height:100%;"> </a>
+	</div>
+</div>
+
+<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
 
 </body>
 </html>
