--- a/404.html
+++ b/404.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>4815162342</title>
+</head>
 <body>
 <h1>Bruner 404.<br/> Room not found </h1>
+</body>
 </html>
