--- a/Art.html
+++ b/Art.html
@@ -1,14 +1,60 @@
-<head>
+<html>
 
+<head>
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="shawn.css">
+<link rel="stylesheet" type="text/css" href="art.css">
+
+<title>Art Stuff</title>
 </head>
 
+<body style="background-image:url('Images/notebook.png')">
 
-<body>
-<p> Oh... well this is embarrassing. </p>
-<p> This page is still being constructed. </p>
-<p> I suggest hitting that nice big "Back" arrow in the top left </p>
+<h1 class="pageTitle"> Art and Stuff!</h1>
 
-<img src="Images/oops.png">
+
+<ul class="photo-grid">
+
+
+	<li>
+	<div style="width:289; height:400">
+		<a href="http://www.flickr.com/photos/anirudhkoul/3536413126/">
+			<figure>
+				<img src="Art/MineThumb.png" height="100%" width="100%" alt="Minecraft Beach">
+				<figcaption><p>Minecraft Beach</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+	
+	
+	<li>
+	<div style="width:289; height:400">
+		<a href="http://www.flickr.com/photos/aigle_dore/5237960181/">
+			<figure>
+				<img src="Art/PokeThumb.png" height="100%" width="100%" alt="Ash's Poster">
+				<figcaption><p>Ash's Poster</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+	
+	
+	<li>
+	<div style="width:289; height:400">
+		<a href="http://www.flickr.com/photos/aigle_dore/5238557764/">
+			<figure>
+				<img src="Art/SharpThumb.png" height="100%" width="100%" alt="Sharpie">
+				<figcaption><p>RoadBlock</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+</ul>
+
+<p>Placeholder artwork while I actually get scans of real ones...</p>
+
+
+<div class="return" style="bottom: 40px"> <a href="Index.html">Return Home </a>  </div>
+<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
+
 </body>
