--- a/Code.html
+++ b/Code.html
@@ -1,14 +1,47 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>Code Projects - Shawn Steffey</title>
 
-<link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" type="text/css" href="shawn.css">
+
 </head>
 
-
 <body>
-<p> Oh... well this is embarrassing. </p>
-<p> This page is still being constructed. </p>
-<p> I suggest hitting that nice big "Back" arrow in the top left </p>
 
-<img src="Images/oops.png">
+
+<div id="maincontainer">
+
+	<div id="topsection">
+		<div class="innertube">
+			<h1>Various Projects</h1>
+			<h3></h3>
+		</div>
+	</div>
+
+	<div id="contentwrapper">
+		<div id="contentcolumn">
+			<div class="innertube">
+				<b>Content Column: <em>Fixed</em></b> 
+			
+			</div>
+		</div>
+	</div>
+
+	<div id="leftcolumn">
+		<div class="innertube">
+			<b>Left Column: <em>200px</em></b> 
+		
+		</div>
+	</div>
+
+	<div id="footer"><a href="http://www.dynamicdrive.com/style/">Dynamic Drive CSS Library</a></div>
+
+</div>
+
+
 </body>
+</html>
