Major Update #2.5 - Bug Fixes
Fixing broken links and the like.  Email me if you find any glaring bugs
or formatting issues.

--- a/Art.html
+++ b/Art.html
@@ -11,13 +11,13 @@
 
 <h1 class="pageTitle"> Art and Stuff!</h1>
 
-
+<h2> Digital Pieces </h2>
 <ul class="photo-grid">
 
 
 	<li>
 	<div style="width:289; height:400">
-		<a href="http://www.flickr.com/photos/anirudhkoul/3536413126/">
+		<a href="http://www.imagekind.com/art/Minecraft-Beachart_art?IMID=14ab4d86-83fc-4c0e-95b6-9863446b224b" target="_blank">
 			<figure>
 				<img src="Art/MineThumb.png" height="100%" width="100%" alt="Minecraft Beach">
 				<figcaption><p>Minecraft Beach</p></figcaption>
@@ -29,7 +29,7 @@
 	
 	<li>
 	<div style="width:289; height:400">
-		<a href="http://www.flickr.com/photos/aigle_dore/5237960181/">
+		<a href="http://www.imagekind.com/Ashs-Poster_art?IMID=e3be40fd-3244-49c4-8c12-c894238c95f8" target="_blank">
 			<figure>
 				<img src="Art/PokeThumb.png" height="100%" width="100%" alt="Ash's Poster">
 				<figcaption><p>Ash's Poster</p></figcaption>
@@ -41,7 +41,7 @@
 	
 	<li>
 	<div style="width:289; height:400">
-		<a href="http://www.flickr.com/photos/aigle_dore/5238557764/">
+		<a href="http://www.imagekind.com/art/Roadblockart_art?IMID=8e546302-f343-47cf-a6d0-a44651ad4bdb" target="_blank">
 			<figure>
 				<img src="Art/SharpThumb.png" height="100%" width="100%" alt="Sharpie">
 				<figcaption><p>RoadBlock</p></figcaption>
@@ -54,7 +54,7 @@
 <p>Placeholder artwork while I actually get scans of real ones...</p>
 
 
-<div class="return" style="bottom: 40px"> <a href="Index.html">Return Home </a>  </div>
+<div class="return" style="bottom: 40px"> <a href="index.html">Return Home </a>  </div>
 <div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
 
 </body>
