--- a/Other.html
+++ b/Other.html
@@ -18,6 +18,6 @@
 </div>
 
 
-<div class="return"> <a href="Index.html">Return Home </a>  </div>
+<div class="return"> <a href="index.html">Return Home </a>  </div>
 <div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
 </body>
