--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="shawn.css">
-
+<script type="text/javascript" src="test1.js"> </script>
 <title>Shawn Steffey</title>
 </head>
 
 
-<body>
+<body">
 <div class="main"> <h1>Shawn Steffey</h1> </div>
 
 
 
 
 <!-- Code Button-->
-<a class="boxed" href="Construction.html" style=" left: 25%;">
+<a class="boxed" href="Construction.html" style=" left: 25%;" onmouseOver="firstDraw()" onMouseOut="removeMouse()";>
 	Code
 </a>
 
@@ -32,7 +32,8 @@
 </a>
 
 <!-- Grid image -->
-<div class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:-51;">
+<div id="coder" class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:-51;">
+<canvas id="code" style="z-index:-10; width:100%; height:100%;"></canvas>
 </div>
 
 <!-- Canvas image -->
