Major Update #4 - JS Doodles
Emits random doodles on the "Other" portion of the index.  Will have
plenty more doodles as well as fade effects.

Barely functional, but I'm sticking to this nightly update thing as much
as I can.  May not get one pushed tomorrow

--- a/javascriptTest.html
+++ b/javascriptTest.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <script type="text/javascript" src="test1.js"> </script>
+  <script type="text/javascript" src="doodle.js"> </script>
     <style>
       body,html 
 		{
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body onload="firstDraw();">
-    <canvas id="code" height=500px width=500px style="background-color:green">
+    <canvas id="doodle" height=700px width=500px style="background-color:white">
 	 </canvas>
   </body>
 </html>
