--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="shawn.css">
 <script type="text/javascript" src="test1.js"> </script>
+<script type="text/javascript" src="doodle.js"> </script>
+<!--<script type="text/javascript" src="doodle.js"> </script>-->
 <title>Shawn Steffey</title>
 </head>
 
 
-<body">
+<body>
 <div class="main"> <h1>Shawn Steffey</h1> </div>
 
 
 
 
 <!-- Code Button-->
-<a class="boxed" href="Construction.html" style=" left: 25%;" onmouseOver="firstDraw()" onMouseOut="removeMouse()";>
+<a class="boxed" href="Construction.html" style=" left: 25%;" onmouseOver="circuits.firstDraw()" onmouseOut="circuits.removeMouse()";>
 	Code
 </a>
 
@@ -27,12 +29,12 @@
 
 
 <!-- Other Button-->
-<a class="boxed" href="Other.html" style=" left: 65%;";>
+<a class="boxed" href="Other.html" style=" left: 65%;" onmouseOver="doodler.firstDraw()" onmouseOut="doodler.removeMouse()";>
 	Other
 </a>
 
 <!-- Grid image -->
-<div id="coder" class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:-51;">
+<div id="coder" class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:-51; position:absolute; left:0;">
 <canvas id="code" style="z-index:-10; width:100%; height:100%;"></canvas>
 </div>
 
@@ -41,7 +43,8 @@
 </div>
 
 <!-- Lined image -->
-<div class="bground" style="width:100%; background-image: url('Images/line_white.jpg'); z-index:-53;">
+<div id="doodleCont" class="bground" style="width:40%; background-image: url('Images/line_white.jpg'); position:absolute; right:0; z-index:-53;">
+<canvas id="doodle" style="z-index:-9; width:100%; height:100%;"></canvas>
 </div>
 
 <!-- Edge1 -->
