--- a/Art.html
+++ b/Art.html
@@ -11,15 +11,23 @@
 
 <h1 class="pageTitle"> Art and Stuff!</h1>
 
+<div class="artBox">
+
+<!--
+<h2> Acrylic </h2>
+<ul class="photo-grid">
+</ul>
+-->
+
 <h2> Digital Pieces </h2>
 <ul class="photo-grid">
 
 
 	<li>
-	<div style="width:289; height:400">
+	<div style="width:289; height:413">
 		<a href="http://www.imagekind.com/art/Minecraft-Beachart_art?IMID=14ab4d86-83fc-4c0e-95b6-9863446b224b" target="_blank">
 			<figure>
-				<img src="Art/MineThumb.png" height="100%" width="100%" alt="Minecraft Beach">
+				<img src="arts/Art/MineThumb.png" height="100%" width="100%" alt="Minecraft Beach">
 				<figcaption><p>Minecraft Beach</p></figcaption>
 			</figure>
 		</a>
@@ -28,10 +36,10 @@
 	
 	
 	<li>
-	<div style="width:289; height:400">
+	<div style="width:289; height:399">
 		<a href="http://www.imagekind.com/Ashs-Poster_art?IMID=e3be40fd-3244-49c4-8c12-c894238c95f8" target="_blank">
 			<figure>
-				<img src="Art/PokeThumb.png" height="100%" width="100%" alt="Ash's Poster">
+				<img src="arts/Art/PokeThumb.png" height="100%" width="100%" alt="Ash's Poster">
 				<figcaption><p>Ash's Poster</p></figcaption>
 			</figure>
 		</a>
@@ -40,10 +48,10 @@
 	
 	
 	<li>
-	<div style="width:289; height:400">
+	<div style="width:289; height:392">
 		<a href="http://www.imagekind.com/art/Roadblockart_art?IMID=8e546302-f343-47cf-a6d0-a44651ad4bdb" target="_blank">
 			<figure>
-				<img src="Art/SharpThumb.png" height="100%" width="100%" alt="Sharpie">
+				<img src="arts/Art/SharpThumb.png" height="100%" width="100%" alt="Sharpie">
 				<figcaption><p>RoadBlock</p></figcaption>
 			</figure>
 		</a>
@@ -52,9 +60,10 @@
 </ul>
 
 <p>Placeholder artwork while I actually get scans of real ones...</p>
+</div>
 
 
-<div class="return" style="bottom: 40px"> <a href="index.html">Return Home </a>  </div>
-<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
+<div class="centerBox"><div class="return" style="bottom: 40px"> <a href="index.html">Return Home </a>  </div></div>
+<div class="centerBox"><div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div></div>
 
 </body>
