--- a/Code.html
+++ b/Code.html
@@ -1,47 +1,54 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Code Projects - Shawn Steffey</title>
+<link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="art.css">
 
-
-<link rel="stylesheet" type="text/css" href="shawn.css">
-
+<title>Code</title>
 </head>
 
-<body>
+<body style="background-image:url('Images/notebook.png')">
 
+<h1 class="pageTitle"> Code and Stuff</h1>
 
-<div id="maincontainer">
+<div class="codeBox">
+<h2> Games </h2>
+<ul>
+<li><a href="zxcb.html">Empty Page 1 </a></li>
+</ul>
 
-	<div id="topsection">
-		<div class="innertube">
-			<h1>Various Projects</h1>
-			<h3></h3>
-		</div>
-	</div>
+<h2> Utility </h2>
+<ul>
+<li><a href="dfgfdg.html">Empty Page 2 </a></li>
+<li><a href="dsfgsdfg.html">Empty Page 3 </a></li>
+</ul>
 
-	<div id="contentwrapper">
-		<div id="contentcolumn">
-			<div class="innertube">
-				<b>Content Column: <em>Fixed</em></b> 
-			
-			</div>
-		</div>
-	</div>
+<!--
+<h2> Demo </h2>
+<ul>
+<li><a href="dfg.html">Empty Page 4 </a></li>
+</ul>
 
-	<div id="leftcolumn">
-		<div class="innertube">
-			<b>Left Column: <em>200px</em></b> 
-		
-		</div>
-	</div>
+<h2> Stuff </h2>
+<ul>
+<li><a href="xvcbncvx.html">Empty Page 5 </a></li>
+</ul>
 
-	<div id="footer"><a href="http://www.dynamicdrive.com/style/">Dynamic Drive CSS Library</a></div>
+<h2> More Stuff </h2>
+<ul>
+<li><a href="xvcnxc.html">Empty Page 6 </a></li>
+</ul>
+
+<h2> Further Stuff </h2>
+<ul>
+<li><a href="xcncxvn.html">Empty Page 7 </a></li>
+</ul>-->
 
 </div>
+<!--<p>Placeholder artwork while I actually get scans of real ones...</p>-->
 
+
+<div class="centerBox"><div class="return"> <a href="index.html">Return Home </a>  </div></div>
+<div class="centerBox"><div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div></div>
 
 </body>
-</html>
