--- a/Other.html
+++ b/Other.html
@@ -1,23 +1,31 @@
 <head>
 
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="shawn.css">
+<link rel="stylesheet" type="text/css" href="art.css">
 </head>
 
 
 <body>
-<h1> Other Stuff </h1>
+<h1 class="pageTitle"> Other Stuff </h1>
 
-<div class="mainBox">
+<div class="codeBox">
 
-<p> Misc</p>
+<h2> Videos</h2>
 <ul>
-<li><a href="Unit_1.html">Chess Video One </a></li>
+<li><a href="others/Unit_1.html">Chess Video One </a></li>
+</ul>
+
+<h2> Photoshop</h2>
+<ul>
+</ul>
+
+<h2> Blender</h2>
+<ul>
 </ul>
 
 </div>
 
 
-<div class="return"> <a href="index.html">Return Home </a>  </div>
-<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
+<div class="centerBox"><div class="return"> <a href="index.html">Return Home </a>  </div></div>
+<div class="centerBox"><div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div></div>
 </body>
