--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <!-- Code Button-->
-<a class="boxed" href="Construction.html" style=" left: 25%;" onmouseOver="circuits.firstDraw()" onmouseOut="circuits.removeMouse()";>
+<a class="boxed" href="Code.html" style=" left: 25%;" onmouseOver="circuits.firstDraw()" onmouseOut="circuits.removeMouse()";>
 	Code
 </a>
 
