--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="shawn.css">
+
+<link rel="icon" 
+      type="image/x-icon" 
+      href="/Images/favicon.ico">
+
+
 <script type="text/javascript" src="test1.js"> </script>
 <script type="text/javascript" src="doodle.js"> </script>
 <!--<script type="text/javascript" src="doodle.js"> </script>-->
