--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <div class="main"> <h1>Shawn Steffey</h1> </div>
 
-
+<img src="Images/construct.png" style="position:absolute; left:50%; top:50%; margin-left:-200px; z-index:40000">
 
 
 <!-- Code Button-->
