--- a/Code.html
+++ b/Code.html
@@ -14,13 +14,11 @@
 <div class="codeBox">
 <h2> Games </h2>
 <ul>
-<li><a href="zxcb.html">Empty Page 1 </a></li>
 </ul>
 
 <h2> Utility </h2>
 <ul>
-<li><a href="dfgfdg.html">Empty Page 2 </a></li>
-<li><a href="dsfgsdfg.html">Empty Page 3 </a></li>
+<li><a href="https://github.com/rssteffey/BlenderChess">Chess Animator (Python script for Blender)</a></li>
 </ul>
 
 <!--
