--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <script type="text/javascript" src="test1.js"> </script>
 <script type="text/javascript" src="doodle.js"> </script>
-<!--<script type="text/javascript" src="doodle.js"> </script>-->
+<script type="text/javascript" src="art.js"> </script>
+
 <title>Shawn Steffey</title>
 </head>
 
@@ -20,7 +21,7 @@
 <body>
 <div class="main"> <h1>Shawn Steffey</h1> </div>
 
-<img src="Images/construct.png" style="position:absolute; left:50%; top:50%; margin-left:-200px; z-index:40000">
+<!--<img src="Images/construct.png" style="position:absolute; left:50%; top:50%; margin-left:-200px; z-index:40000">-->
 
 
 <!-- Code Button-->
@@ -29,7 +30,7 @@
 </a>
 
 <!-- Art Button-->
-<a class="boxed" href="Art.html" style=" left: 45%;";>	
+<a class="boxed" href="Art.html" style=" left: 45%;" onmouseOver="arty.firstDraw()" onmouseOut="arty.removeMouse()";>	
 	Art
 </a>
 
@@ -46,6 +47,11 @@
 
 <!-- Canvas image -->
 <div class="bground" style="width:60%; background-image: url('Images/canvas_white.jpg'); z-index:-52;">
+</div>
+
+<!-- Art Splooshes Canvas -->
+<div id="arts" style="width:100%; z-index:-37; position:absolute; left:0;>
+	<canvas id="artCanvas" style="z-index:-7; width:100%; height:100%;"></canvas>
 </div>
 
 <!-- Lined image -->
