--- a/Art.html
+++ b/Art.html
@@ -19,8 +19,46 @@
 </ul>
 -->
 
-<h2> Digital Pieces </h2>
+<h2 style="text-align:center"> Click on any piece to purchase a print! </h2>
+
+<!--<p>(Click "Unframed Print" below the image) </p>-->
+
 <ul class="photo-grid">
+
+
+
+	<li>
+	<div style="width:289; height:361">
+		<a href="http://www.imagekind.com/Anna_art?IMID=24b2e66d-d3ee-4aae-91f2-b1690925bfd9" target="_blank">
+			<figure>
+				<img src="arts/Art/AnnaThumb.png" height="100%" width="100%" alt="Anna">
+				<figcaption><p>Anna</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+
+	<li>
+	<div style="width:289; height:361">
+		<a href="http://www.imagekind.com/Elsa_art?IMID=5817ba11-30f4-45a7-a923-88521ea76efb" target="_blank">
+			<figure>
+				<img src="arts/Art/ElsaThumb.png" height="100%" width="100%" alt="Elsa">
+				<figcaption><p>Elsa</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+	
+	<li>
+	<div style="width:289; height:232;">
+		<a href="http://www.imagekind.com/WalterWhite_art?IMID=4187d1c8-bdb1-4923-a425-0b1f7193ec64" target="_blank">
+			<figure>
+				<img src="arts/Art/WalterThumb.png" height="100%" width="100%" alt="Breaking Bad">
+				<figcaption><p>Walter White</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
 
 
 	<li>
@@ -57,9 +95,21 @@
 		</a>
 	</div>
 	</li>
-</ul>
 
-<p>Placeholder artwork while I actually get scans of real ones...</p>
+
+	<li>
+	<div style="width:289; height:361">
+		<a href="http://www.imagekind.com/Amy_art?IMID=19cd0aea-87c2-4e9f-b823-64c80c8e2764" target="_blank">
+			<figure>
+				<img src="arts/Art/AmyThumb.png" height="100%" width="100%" alt="Amy Pond">
+				<figcaption><p>Amy</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+	
+	
+</ul>
 </div>
 
 
