--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </a>
 
 <!-- Art Button-->
-<a class="boxed" href="Art.html" style=" left: 45%;" onmouseOver="arty.firstDraw()" onmouseOut="arty.removeMouse()";>	
+<a class="boxed" href="Art.html" style=" left: 45%;" onmouseOver="arty.init()" onmouseOut="arty.mouseout()";>	
 	Art
 </a>
 
@@ -50,8 +50,8 @@
 </div>
 
 <!-- Art Splooshes Canvas -->
-<div id="arts" style="width:100%; z-index:-37; position:absolute; left:0;>
-	<canvas id="artCanvas" style="z-index:-7; width:100%; height:100%;"></canvas>
+<div id="arts" style="width:100%; z-index:-37; position:absolute; left:0;">
+<canvas id="artCanvas" style="z-index:-7; width:100%; height:100%;"></canvas>
 </div>
 
 <!-- Lined image -->
@@ -60,11 +60,11 @@
 </div>
 
 <!-- Edge1 -->
-<div class="bgroundRip" style="left: 39%; width:50px; background-image: url('Images/ripleft.png'); z-index:-20; margin-left: -42px;">
+<div class="bgroundRip" style="left: 39%; width:50px; background-image: url('Images/ripleft.png'); z-index:-40; margin-left: -42px;">
 </div
 
 <!-- Edge2 -->
-<div class="bgroundRip" style="left: 60%; width:50px; background-image: url('Images/ripright.png'); z-index:-20;">
+<div class="bgroundRip" style="left: 60%; width:50px; background-image: url('Images/ripright.png'); z-index:-40;">
 </div
 
 
