Further Art Updates
An ancient mystery.  Added the fox painting to the gallery, and a few
more fixes to the dripping JS.  Also cleaned up a bunch of the JS code
to be readable (presentable) and added the script links to the code
page.

--- a/Art.html
+++ b/Art.html
@@ -9,8 +9,7 @@
 
 <body style="background-image:url('Images/notebook.png')">
 
-<h1 class="pageTitle"> Art and Stuff!</h1>
-
+<!--<h1 class="pageTitle" style="text-align:center"> Paint and Art and Stuff!</h1>-->
 <div class="artBox">
 
 <!--
@@ -19,7 +18,10 @@
 </ul>
 -->
 
-<h2 style="text-align:center"> Click on any piece to purchase a print! </h2>
+<h2 style="text-align:center"> Paintings </h2>
+<p>Click on any piece to purchase a print!</p>
+<p>If you'd like the original canvas of any particular piece, just send me an email requesting a quote, and I'll get back to you as quickly as possible. </p>
+<h2> </h2>
 
 <!--<p>(Click "Unframed Print" below the image) </p>-->
 
@@ -49,17 +51,44 @@
 	</div>
 	</li>
 	
+	
+	<li>
+	<div style="width:289; height:361">
+		<a href="http://www.imagekind.com/Ancient-Mystery_art?imid=b1d224ee-380b-43ee-83db-2b88b69fca72" target="_blank">
+			<figure>
+				<img src="arts/Art/FoxThumb.png" height="100%" width="100%" alt="What Does the Fox Say?">
+				<figcaption><p>Ancient Mystery (Prints Only)</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+	
+	<li>
+	<div style="width:289; height:361">
+		<a href="http://www.imagekind.com/Amy_art?IMID=19cd0aea-87c2-4e9f-b823-64c80c8e2764" target="_blank">
+			<figure>
+				<img src="arts/Art/AmyThumb.png" height="100%" width="100%" alt="Amy Pond">
+				<figcaption><p>Pond</p></figcaption>
+			</figure>
+		</a>
+	</div>
+	</li>
+	
 	<li>
 	<div style="width:289; height:232;">
 		<a href="http://www.imagekind.com/WalterWhite_art?IMID=4187d1c8-bdb1-4923-a425-0b1f7193ec64" target="_blank">
 			<figure>
 				<img src="arts/Art/WalterThumb.png" height="100%" width="100%" alt="Breaking Bad">
-				<figcaption><p>Walter White</p></figcaption>
+				<figcaption><p>We Need to Cook</p></figcaption>
 			</figure>
 		</a>
 	</div>
 	</li>
 
+	<h2> </h2>
+	<h2> </h2>
+	<h2 style="text-align:center"> Digital Prints </h2>
+	<p> No originals available </p>
 
 	<li>
 	<div style="width:289; height:413">
@@ -96,17 +125,6 @@
 	</div>
 	</li>
 
-
-	<li>
-	<div style="width:289; height:361">
-		<a href="http://www.imagekind.com/Amy_art?IMID=19cd0aea-87c2-4e9f-b823-64c80c8e2764" target="_blank">
-			<figure>
-				<img src="arts/Art/AmyThumb.png" height="100%" width="100%" alt="Amy Pond">
-				<figcaption><p>Amy</p></figcaption>
-			</figure>
-		</a>
-	</div>
-	</li>
 	
 	
 </ul>
