--- a/Code.html
+++ b/Code.html
@@ -21,12 +21,14 @@
 <li><a href="https://github.com/rssteffey/BlenderChess">Chess Animator (Python script for Blender)</a></li>
 </ul>
 
-<!--
-<h2> Demo </h2>
-<ul>
-<li><a href="dfg.html">Empty Page 4 </a></li>
-</ul>
 
+<h2> Javascript from the Homepage</h2>
+<ul>
+<li><a href="http://rssteffey.github.io/art.js">Paint Drips</a></li>
+<li><a href="http://rssteffey.github.io/doodle.js">Doodle Launcher</a></li>
+<li><a href="http://rssteffey.github.io/test1.js">Circuit Board</a></li>
+</ul>
+<!--
 <h2> Stuff </h2>
 <ul>
 <li><a href="xvcbncvx.html">Empty Page 5 </a></li>
@@ -43,7 +45,6 @@
 </ul>-->
 
 </div>
-<!--<p>Placeholder artwork while I actually get scans of real ones...</p>-->
 
 
 <div class="centerBox"><div class="return"> <a href="index.html">Return Home </a>  </div></div>
