Gigantic Blog Update!
I made a blog!  And took out the "Other" page.  The blog pages all run
through Jekyll, which translates my plaintext entries.  A few  file
restructurings, probably to be followed by more soon as I organize and
clean unnecessary files.  This is a hefty commit.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 
 <!-- Other Button-->
-<a class="boxed" href="Other.html" style=" left: 65%;" onmouseOver="doodler.firstDraw()" onmouseOut="doodler.removeMouse()";>
-	Other
+<a class="boxed" href="Blog.html" style=" left: 65%;" onmouseOver="doodler.firstDraw()" onmouseOut="doodler.removeMouse()";>
+	Blog
 </a>
 
 <!-- Grid image -->
