--- a/Code.html
+++ b/Code.html
@@ -14,7 +14,7 @@
 <div class="codeBox">
 <h2> Games </h2>
 <ul>
-<li><a href="http://rssteffey.github.io/Blog.html">Blog test link</a></li>
+<!--<li><a href="http://rssteffey.github.io/Blog.html">Blog test link</a></li>-->
 </ul>
 
 <h2> Utility </h2>
