--- a/Archive.html
+++ b/Archive.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Sketchy Bits
+title: Archive - Sketchy Bits
 ---
 <div id=home">
 	<ul id="archive" class="archive_list">
