--- a/Art.html
+++ b/Art.html
@@ -15,6 +15,9 @@
   ga('send', 'pageview');
 
 </script>
+
+<script src="https://use.fontawesome.com/be14366987.js"></script>
+
 </head>
 
 <body style="background-image:url('Images/notebook.png')">
@@ -142,6 +145,6 @@
 
 
 <div class="centerBox"><div class="return" style="bottom: 40px"> <a href="index.html">Return Home </a>  </div></div>
-<div class="centerBox"><div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div></div>
+<div class="centerBox"><div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp rssteffey@gmail.com &nbsp &nbsp &nbsp  <i class="fa fa-twitter" aria-hidden="true"></i> &nbsp @SteffeyStudios </div></div>
 
 </body>
