--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       type="image/x-icon" 
       href="/Images/favicon.ico">
 
-
+<script src="https://use.fontawesome.com/be14366987.js"></script>
 
 <script type="text/javascript" src="test1.js"> </script>
 <script type="text/javascript" src="doodle.js"> </script>
@@ -43,7 +43,7 @@
 
 
 <!-- Code Button-->
-<a class="boxed" href="Code.html" style=" left: 25%;" onmouseOver="circuits.firstDraw()" onmouseOut="circuits.removeMouse()";>
+<a class="boxed" href="https://github.com/rssteffey" target="_blank" style=" left: 25%;" onmouseOver="circuits.firstDraw()" onmouseOut="circuits.removeMouse()";>
 	Code
 </a>
 
@@ -93,7 +93,7 @@
 	</div>
 </div>
 
-<div class="footer"> rssteffey42@students.tntech.edu  &nbsp &nbsp &nbsp &nbsp   (865) 719-2881  </div>
+<div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp rssteffey@gmail.com &nbsp &nbsp &nbsp  <i class="fa fa-twitter" aria-hidden="true"></i> &nbsp @SteffeyStudios  </div>
 
 </body>
 </html>
