Beginning transition to Design orientation
Swapping out some things, now linking to Github and currently a broken
Design page

--- a/Art.html
+++ b/Art.html
@@ -145,6 +145,6 @@
 
 
 <div class="centerBox"><div class="return" style="bottom: 40px"> <a href="index.html">Return Home </a>  </div></div>
-<div class="centerBox"><div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp rssteffey@gmail.com &nbsp &nbsp &nbsp  <i class="fa fa-twitter" aria-hidden="true"></i> &nbsp @SteffeyStudios </div></div>
+<div class="centerBox"><div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> rssteffey@gmail.com &nbsp &nbsp &nbsp  <a href="https://twitter.com/SteffeyStudios" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> @SteffeyStudios </a> </div></div>
 
 </body>
