--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </a>
 
 <!-- Art Button-->
-<a class="boxed" href="Art.html" style=" left: 45%;" onmouseOver="arty.init()" onmouseOut="arty.mouseout()";>	
-	Art
+<a class="boxed" href="Construction.html" style=" left: 45%;" onmouseOver="arty.init()" onmouseOut="arty.mouseout()";>	
+	Design
 </a>
 
 
@@ -93,7 +93,7 @@
 	</div>
 </div>
 
-<div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> &nbsp rssteffey@gmail.com &nbsp &nbsp &nbsp  <i class="fa fa-twitter" aria-hidden="true"></i> &nbsp @SteffeyStudios  </div>
+<div class="centerBox"><div class="footer"> <i class="fa fa-envelope" aria-hidden="true"></i> rssteffey@gmail.com &nbsp &nbsp &nbsp  <a href="https://twitter.com/SteffeyStudios" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> @SteffeyStudios </a> </div></div>
 
 </body>
 </html>
