--- a/Construction.html
+++ b/Construction.html
@@ -1,16 +1,39 @@
-<head>
+<html>
+	<head>
+	<link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="shawn.css">
 
-<link href='http://fonts.googleapis.com/css?family=Boogaloo|Fjalla+One|Jura|Chelsea+Market' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="shawn.css">
-</head>
+	<title>Designing Design</title>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-38933561-2', 'auto');
+	  ga('send', 'pageview');
 
-<body style="margin:20; padding:0">
-<p> Oh... well this is embarrassing. </p>
-<p> This page is still being constructed. </p>
-<p> I suggest hitting that nice big "Back" arrow in the top left </p>
+	</script>
 
-<div style="width:512px; height:400">
-<img src="Images/oops.png" style="width:100%; height:100%">
-</div>
-</body>
+	<script src="https://use.fontawesome.com/be14366987.js"></script>
+
+	</head>
+
+	<body style="background-image:url('Images/canvas_white.jpg'); background-color:#ddd">
+		<div class="opacity_changer"></div>
+
+		<div style="height:20%">
+		</div>
+
+		<div class="designBox centerBox">
+			<p style="text-align:center"><i class="fa fa-map-signs fa-5x" aria-hidden="true"></i></p>
+		</div>
+
+		<div class="designBox centerBox">
+			<h2 style="text-align:center"> Ironically enough... </h2>
+			<p style="text-align:center">This page is still being designed</p>
+			<p style="text-align:center">How about we head back <a href="Index.html">somewhere a little less bland</a></p>
+		</div>
+
+	</body>
+</html>
