Fixing dumb index link mistake

--- a/Construction.html
+++ b/Construction.html
@@ -32,7 +32,7 @@
 		<div class="designBox centerBox">
 			<h2 style="text-align:center"> Ironically enough... </h2>
 			<p style="text-align:center">This page is still being designed</p>
-			<p style="text-align:center">How about we head back <a href="Index.html">somewhere a little less bland</a></p>
+			<p style="text-align:center">How about we head back <a href="index.html">somewhere a little less bland</a></p>
 		</div>
 
 	</body>
