Syncing changes but I'm not convinced they're necessary
But so be it

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <!-- Other Button-->
-<a class="boxed" href="blog" style=" left: 65%;" onmouseOver="doodler.firstDraw()" onmouseOut="doodler.removeMouse()";>
+<a class="boxed" href="blog.html" style=" left: 65%;" onmouseOver="doodler.firstDraw()" onmouseOut="doodler.removeMouse()";>
 	Blog
 </a>
 
