--- a/Blog.html
+++ b/Blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Sketchy Bits
-permalink: /blog
+permalink: /blog.html
 ---
 <div id=home">
 	<ul id="archive" class="archive_list">
