Wordabeasts link push
Adding WaB to homepage

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 	Blog
 </a>
 
+<!-- Wordabeasts Button-->
+<div class="wab_container">
+<div class="wab" onclick="window.location='http://store.steampowered.com/app/668190/Wordabeasts/'";>  
+  <img src="http://wordabeasts.com/img/logo.png"/>
+</div>
+</div>
+
 <!-- Grid image -->
 <div id="coder" class="bground" style="width:39%; background-image: url('Images/grid_white.jpg'); z-index:-51; position:absolute; left:0;">
 <canvas id="code" style="z-index:-10; width:100%; height:100%;"></canvas>
