Site now has seasonal theming

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
   Well as long as you're poking around, here are some fun things to do:
 
   This site has seasonal colors!  But it's unlikely you'd notice in normal use; If you wanna try them out now, run
-    swapSeason("christmas");
-  or whatever theme you'd like to use in place of Christmas.
-  Possible themes are: "summer", "winter", "xmas", "shawn", "new_years", "nautical", 
-
+    swapSeason("summer");
+  or whatever theme you'd like to use in place of summer's
+  
+  Possible themes are: 
+    - "spring" 
+	- "summer"
+	- "autumn"
+	- "winter"
+	- "xmas"
+	- "shawn"
+	- "halloween"
+	- "ut", 
 
   The starry descending background is made using Three.js
   It was heavily inspired by the return-to-earth scene at the apex of EPCOT's Spaceship Earth (The ride inside the golf ball)
@@ -60,11 +68,11 @@
 			<h2 class="header_lined">About Shawn</h2>
 			<div class="dots_container">
 				<div class = "dots_logo">
-					<span class="dot summer_color_1"></span>
-					<span class="dot summer_color_2"></span>
-					<span class="dot summer_color_3"></span>
-					<span class="dot summer_color_4"></span>
-					<span class="dot summer_color_5"></span>
+					<span class="dot default_color_1"></span>
+					<span class="dot default_color_2"></span>
+					<span class="dot default_color_3"></span>
+					<span class="dot default_color_4"></span>
+					<span class="dot default_color_5"></span>
 				</div>
 			</div>
 			<div class="about_content">
@@ -91,6 +99,14 @@
 						(Alexandria, Echo, and Alexa - respectively)
 					</p>
 				</div>
+
+				<div class="icon-row social">
+					<a href="https://www.linkedin.com/in/rssteffey/" target="new" class="default_color_text_1" alt="LinkedIn"><i class="fa fa-linkedin"></i></a>
+					<a href="https://github.com/rssteffey" target="new" class="default_color_text_2" alt="Github"><i class="fa fa-github"></i></a>
+					<a href="https://www.instagram.com/steffeystudios" target="new" class="default_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
+					<a href="https://twitter.com/steffeystudios" target="new" class="default_color_text_4" alt="Twitter"><i class="fa fa-twitter"></i></a>
+					<a href="https://open.spotify.com/user/122880200" target="new" class="default_color_text_5" alt="Spotify"><i class="fa fa-spotify"></i></a>
+				</div>
 				
 			</div>
 		</div>
@@ -101,15 +117,15 @@
 			<h2 class="header_lined">Projects</h2>
 			<div class="dots_container">
 				<div class = "dots_logo">
-					<span class="dot summer_color_1"></span>
-					<span class="dot summer_color_2"></span>
-					<span class="dot summer_color_3"></span>
-					<span class="dot summer_color_4"></span>
-					<span class="dot summer_color_5"></span>
+					<span class="dot default_color_1"></span>
+					<span class="dot default_color_2"></span>
+					<span class="dot default_color_3"></span>
+					<span class="dot default_color_4"></span>
+					<span class="dot default_color_5"></span>
 				</div>
 			</div>
 			<div class="projects_list">
-				<div class="projects_block summer_color_1 centerized">
+				<div class="projects_block default_color_1 centerized">
 					<div class="project_image">
 						<img src= "img/projects/wab.png"/>
 					</div>
@@ -122,7 +138,7 @@
 					</div>
 				</div>
 				<span class="panel_edge"></span>
-				<div class="projects_block summer_color_2 centerized">
+				<div class="projects_block default_color_2 centerized">
 					<div class="project_image">
 						<img src= "img/projects/tron.png"/>
 					</div>
@@ -133,7 +149,7 @@
 					</div>
 				</div>
 				<span class="panel_edge"></span>
-				<div class="projects_block summer_color_3 centerized">
+				<div class="projects_block default_color_3 centerized">
 					<div class="project_image">
 						<img src= "img/projects/slots.png"/>
 					</div>
@@ -146,7 +162,7 @@
 					</div>
 				</div>
 				<span class="panel_edge"></span>
-				<div class="projects_block summer_color_4 centerized">
+				<div class="projects_block default_color_4 centerized">
 					<div class="project_image">
 						<img src= "img/projects/barcade.png"/>
 					</div>
@@ -157,7 +173,7 @@
 					</div>
 				</div>
 				<span class="panel_edge"></span>
-				<div class="projects_block summer_color_5 centerized">
+				<div class="projects_block default_color_5 centerized">
 					<div class="project_image">
 						<img src= "img/projects/wave.png"/>
 					</div>
@@ -170,7 +186,7 @@
 					</div>
 				</div>
 				<span class="panel_edge"></span>
-				<div class="projects_block summer_color_1 centerized">
+				<div class="projects_block default_color_1 centerized">
 					<div class="project_image">
 						<img src= "img/projects/fridge.png"/>
 					</div>
@@ -183,7 +199,7 @@
 					</div>
 				</div>
 				<span class="panel_edge"></span>
-				<div class="projects_block summer_color_2 centerized">
+				<div class="projects_block default_color_2 centerized">
 					<div class="project_image">
 						<img src= "img/projects/art.png"/>
 					</div>
@@ -204,20 +220,20 @@
 			<h2 class="header_lined">Contact</h2>
 			<div class="dots_container">
 				<div class = "dots_logo">
-					<span class="dot summer_color_1"></span>
-					<span class="dot summer_color_2"></span>
-					<span class="dot summer_color_3"></span>
-					<span class="dot summer_color_4"></span>
-					<span class="dot summer_color_5"></span>
+					<span class="dot default_color_1"></span>
+					<span class="dot default_color_2"></span>
+					<span class="dot default_color_3"></span>
+					<span class="dot default_color_4"></span>
+					<span class="dot default_color_5"></span>
 				</div>
 			</div>
 			<img alt="rssteffey at gmail" src="img/email.png" class="email"></img>
 			<div class="icon-row social">
-				<a href="https://www.linkedin.com/in/rssteffey/" target="new" class="summer_color_text_1" alt="LinkedIn"><i class="fa fa-linkedin"></i></a>
-				<a href="https://github.com/rssteffey" target="new" class="summer_color_text_2" alt="Github"><i class="fa fa-github"></i></a>
-				<a href="https://www.instagram.com/steffeystudios" target="new" class="summer_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
-				<a href="https://twitter.com/steffeystudios" target="new" class="summer_color_text_4" alt="Twitter"><i class="fa fa-twitter"></i></a>
-				<a href="https://open.spotify.com/user/122880200" target="new" class="summer_color_text_5" alt="Spotify"><i class="fa fa-spotify"></i></a>
+				<a href="https://www.linkedin.com/in/rssteffey/" target="new" class="default_color_text_1" alt="LinkedIn"><i class="fa fa-linkedin"></i></a>
+				<a href="https://github.com/rssteffey" target="new" class="default_color_text_2" alt="Github"><i class="fa fa-github"></i></a>
+				<a href="https://www.instagram.com/steffeystudios" target="new" class="default_color_text_3" alt="Instagram"><i class="fa fa-instagram"></i></a>
+				<a href="https://twitter.com/steffeystudios" target="new" class="default_color_text_4" alt="Twitter"><i class="fa fa-twitter"></i></a>
+				<a href="https://open.spotify.com/user/122880200" target="new" class="default_color_text_5" alt="Spotify"><i class="fa fa-spotify"></i></a>
 			</div>
 			
 		</div>
