Remove console.log(), as always

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   Well as long as you're poking around, here are some fun things to do:
 
   This site has seasonal colors!  But it's unlikely you'd notice in normal use; If you wanna try them out now, run
-    swapSeason("summer");
-  or whatever theme you'd like to use in place of summer's
-  
+    swapSeason("<theme_name>")
+
   Possible themes are: 
     - "spring" 
 	- "summer"
