Mobile fixes - We're responsvie again

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						<img src= "img/projects/barcade.png"/>
 					</div>
 					<div class="project_desc">
-						<h3 style="font-size: 2.3em;">Lake House Arcade</h3>
+						<h3>Lake House Arcade</h3>
 						<p>Custom arcade machine built as a family present. Designed to be nautical, yet modern.</p>
 						<!-- <a class="learn_more" target="_blank" href="https://hahaha.ineedtowritethis.com">Read about how I made it</a> -->
 					</div>
@@ -226,7 +226,7 @@
 					<span class="dot default_color_5"></span>
 				</div>
 			</div>
-			<img alt="rssteffey at gmail" src="img/email.png" class="email"></img>
+			<img alt="rssteffey at gmail" src="img/email_large.png" class="email"></img>
 			<div class="icon-row social">
 				<a href="https://www.linkedin.com/in/rssteffey/" target="new" class="default_color_text_1" alt="LinkedIn"><i class="fa fa-linkedin"></i></a>
 				<a href="https://github.com/rssteffey" target="new" class="default_color_text_2" alt="Github"><i class="fa fa-github"></i></a>
