Add Daft Punk Code Link
Link to the code at the very least (Write up to come)

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<div class="project_desc">
 						<h3>Daft Punk DJs</h3>
 						<p>A 4-monitor Unity app to simulate a live DJ booth for a TRON-themed party</p>
-						<!-- <a class="learn_more" target="_blank" href="">Read about the design process</a> -->
+						<a class="learn_more" target="_blank" href="https://github.com/rssteffey/daft-punk-djs">The code (designed for a *highly* specific scenario) </a>
 					</div>
 				</div>
 				<span class="panel_edge"></span>
