--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 						<h3>Daft Punk DJs</h3>
 						<p>A 4-monitor Unity app to simulate a live DJ booth for a TRON-themed party</p>
 						<a class="learn_more" target="_blank" href="https://github.com/rssteffey/daft-punk-djs">The code (designed for a *highly* specific scenario) </a>
+						<a class="learn_more" target="_blank" href="https://youtu.be/0bIGsbFc4ww"> And a quick demo video </a>
 					</div>
 				</div>
 				<span class="panel_edge"></span>
